# pdp12-asm-rs

./: .gitignore  Cargo.toml
src/: cli.yaml  main.rs  permenant_symbols.yaml  symbols.rs
