[package]
name = "pdp12asm-rs"
version = "0.1.0"
authors = ["jnowaczek <jnowaczek@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.0"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
lalrpop-util = "0.19.0"
regex = "1.3.9"